<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/statusTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/statusValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status_idle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintTop_toBottomOf="@id/statusTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/connectButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintTop_toBottomOf="@id/statusValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/rootToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/root_module_toggle"
        app:layout_constraintTop_toBottomOf="@id/connectButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/rootStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/root_module_status_unknown"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintTop_toBottomOf="@id/rootToggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
