<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/actionMenuEditTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_menu_edit_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/actionMenuEditHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_menu_edit_hint"
        app:layout_constraintTop_toBottomOf="@id/actionMenuEditTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/actionMenuAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_menu_add_item"
        app:layout_constraintTop_toBottomOf="@id/actionMenuEditHint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/actionMenuEditList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_menu_edit_list_placeholder"
        app:layout_constraintTop_toBottomOf="@id/actionMenuAddItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
