<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/sonarpenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sonarpen_calibration_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sonarpenPermissionStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sonarpen_permission_needed"
        app:layout_constraintTop_toBottomOf="@id/sonarpenTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/sonarpenRequestPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sonarpen_request_permission"
        app:layout_constraintTop_toBottomOf="@id/sonarpenPermissionStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
